--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,7 @@ fastapi-pagination~=0.12.1
 SQLAlchemy~=1.4.0
 urllib3~=2.0.3
 selenium~=4.10.0
+playwright~=1.37.0
+allure-pytest~=2.13.2
+click~=8.1.7
+pytest-asyncio~=0.21.1
