--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,12 @@ pydantic~=1.10.6
 jsonpath~=0.82
 starlette~=0.26.1
 openpyxl~=3.0.10
-requests~=2.28.1
+requests~=2.31.0
 pytest~=7.1.2
 Faker~=14.2.0
 ujson~=5.4.0
-yaml~=5.4.1
+pyyaml~=5.4.1
+python-multipart~=0.0.6
 
 ddddocr~=1.4.7
 aiomysql~=0.0.21
